Adding files for the challenge

--- a/index.html
+++ b/index.html
@@ -57,13 +57,33 @@
               <ul class="bg-dark">
                 <li class="bg-dark">
                   <label for="date">Enter Date</label>
-                  <input type="text" placeholder="1/10/2010" id="datetime" />
+                  <input class ="form-control" type="text" placeholder="1/10/2010" id="datetime" />
                 </li>
-                <li>
-                   <button id="filter-btn" type="button" class="btn btn-dark">
-                     Filter Table
-                   </button>
+
+                <!--- for challenge -->
+                <li class="bg-dark">
+                  <label for="city">Enter City</label>
+                  <input class ="form-control" type="text" placeholder="benton" id="city" />
                 </li>
+
+                <li class="bg-dark">
+                  <label for="state">Enter State</label>
+                  <input class ="form-control" type="text" placeholder="ar" id="state" />
+                </li>
+
+                <li class="bg-dark">
+                  <label for="country">Enter Country</label>
+                  <input class ="form-control" type="text" placeholder="us" id="country" />
+                </li>
+
+                <li class="bg-dark">
+                  <label for="shape">Enter Shape</label>
+                  <input class ="form-control" type="text" placeholder="circle" id="shape" />
+                </li>
+
+
+
+
               </ul>
              </form>
 
